# tarsila-asr

./: README.md  eval_all_models.py  main.py  pyproject.toml  semascore.py
distil-whisper/: distil-whisper-exps.ipynb  distil-whisper-push-to-hub.py  distil-whisper-train.py  load-envs.sh  train.sh
h100/: openai__whisper-large-v3.csv  openai__whisper-medium.csv  sidleal__distil-whisper-tarsila-asr-v1-750k.csv  sidleal__whisper-tarsila-asr-large3-v1-450k.csv  sidleal__whisper-tarsila-asr-large3-v1-75k.csv  sidleal__whisper-tarsila-asr-medium-v1-100k.csv  sidleal__whisper-tarsila-asr-medium-v1-350k.csv  tarsila-asr-results-merged-metrics.csv  tarsila-asr-results-merged.csv
rtx4070/: sidleal__omniASR_LLM_300M_Tarsila_4k.csv  tarsila-asr-results-merged-metrics.csv  tarsila-asr-results-merged.csv
voice-gender-classifier/: classificacao.ipynb  gender_output.csv
whisper-large/: Dockerfile  Dockerfile.base  build-base.sh  build.sh  whisper-publish.py  whisper-train-h100.py  whisper-train-medium-h100.py  whisper-train.py
