[project]
name = "tarsila-asr-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "libsndfile>=0.0.0",
    "omnilingual-asr>=0.2.0",
    "soundfile>=0.13.1",
    "torch==2.8.0",
    "torchcodec>=0.9.1",
    "transformers>=4.57.6",
]
